[package]
name = "wgpu-mipmap"
version = "0.1.0"
edition = "2021"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
description = "Generate mipmaps for wgpu textures"
repository = "https://github.com/jshrake/wgpu-mipmap"
license-file = "LICENSE"
readme = "README.md"
keywords = ["wgpu", "graphics", "mipmaps"]
categories = ["graphics", "rendering"]
exclude = ["examples/**/*", ".github/**/*"]
 resolver = "2"

[features]
debug = ["renderdoc"]

[dependencies]
log = "0.4"
# renderdoc is only used in the examples, but
# cargo does not support optional dev dependencies
renderdoc = { version = "0.10.0", optional = true }
thiserror = "1.0"
wgpu = { version = "0.12", features = ["spirv"] }

[dev-dependencies]
bytemuck = "1.4"
env_logger = "0.9"
futures = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
tracing = { version = "0.1", features = ["log"] }
